--- a/.env.save
+++ b/.env.save
@@ -1,2 +1,2 @@
-GROQ_API_KEY= add_your_secret_key
+GROQ_API_KEY= add_your_secret_key(Go on the website of grok and create a secret key and copy this key on notepad or any othey private file)
 
